PZ-233 | Encapsulate global constants so that only specific functionality is exposed to plugins
+ Interim solution to add exports for internal package purely for unit test usage

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>